--- a/public/lang/cn/faq/index.html
+++ b/public/lang/cn/faq/index.html
@@ -187,7 +187,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#747474] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">是否有详细的指南，以便我可以遵循？</p>
 
 						<!-- arrow icon -->
@@ -207,7 +207,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#747474] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">键盘映射说明</p>
 
 						<!-- arrow icon -->
@@ -274,7 +274,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#747474] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">什么是PlayCover的捐赠版本？</p>
 
 						<!-- arrow icon -->
@@ -292,7 +292,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#747474] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">下一个版本的Playcover何时发布？</p>
 
 						<!-- arrow icon -->
@@ -310,7 +310,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#747474] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">我是否必须禁用SIP（系统完整性保护），这样做是否安全？</p>
 
 						<!-- arrow icon -->
@@ -328,7 +328,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#747474] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">我怎样才能更改原神的设置？</p>
 
 						<!-- arrow icon -->
@@ -346,7 +346,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#747474] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">我应该如何添加鼠标左键或右键映射？</p>
 
 						<!-- arrow icon -->
@@ -364,7 +364,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#747474] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">视角在游戏中的移动不正常？</p>
 
 						<!-- arrow icon -->
@@ -385,7 +385,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#747474] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">我已经按照视频中的所有步骤正确操作了，但我的键位绑定仍然不工作？</p>
 
 						<!-- arrow icon -->
@@ -403,7 +403,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#747474] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">即使我做了所有的步骤都正确，PlayCover还是不工作（甚至故障排除说我的系统是正确的）？</p>
 
 						<!-- arrow icon -->
@@ -421,7 +421,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#747474] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">每次发布PlayCover，我都要重新安装原神吗？</p>
 
 						<!-- arrow icon -->
@@ -439,7 +439,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#747474] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">我如何重设「sudo nvram boot-args…」命令？</p>
 
 						<!-- arrow icon -->
@@ -459,7 +459,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#747474] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">为什么我在重启或打开Mac时看到一大串代码？</p>
 
 						<!-- arrow icon -->
@@ -483,7 +483,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#747474] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">当我的密码为空时，我不能禁用SIP，也不能添加启动参数吗？</p>
 
 						<!-- arrow icon -->
@@ -501,7 +501,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#747474] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">我得到了『此应用程序不支持在此Mac上』的错误？</p>
 
 						<!-- arrow icon -->
@@ -519,7 +519,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#747474] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">我遇到了『你没有权限』的错误？</p>
 
 						<!-- arrow icon -->
@@ -555,7 +555,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#747474] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">我的键盘映射在原神中表现得很奇怪，重新启动应用程序和Mac也没有帮助？</p>
 
 						<!-- arrow icon -->
@@ -652,24 +652,24 @@
 		<section class="hidden contact-wrapper contact-popup z-40 fixed w-[100vw] h-screen bg-[rgba(0,0,0,0.8)] dark:bg-[rgba(0,0,0,0.8)]">
 			<!-- modal -->
 			<div class="w-[100vw] h-screen flex flex-col items-center justify-center">
-				<div class="contact-modal flex flex-col items-center w-[22rem] md:w-[35rem] bg-white dark:bg-[#1E1E1E] rounded-lg shadow bg-gradient-to-tl from-[#5C258D] to-[#4389A2]">
+				<div class="contact-modal flex flex-col items-center w-[22rem] md:w-[35rem] bg-white dark:bg-[#1E1E1E] rounded-lg shadow">
 					<!-- close button -->
 					<div class="relative pt-4">
-						<button class="bg-gray-50 rounded-full contact-close-button absolute top-4 lg:top-4 left-[8.5rem] lg:left-[14.7rem]">
-							<svg xmlns="http://www.w3.org/2000/svg" class="text-gray-800 md:scale-100 transition duration-300 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+						<button class=" contact-close-button absolute top-4 lg:top-4 left-[8.5rem] lg:left-[14.7rem]">
+							<svg xmlns="http://www.w3.org/2000/svg" class="text-gray-600 dark:text-gray-200 md:scale-100 transition duration-300 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
 							</svg>
 						</button>
 					</div>
 					<!-- content -->
-					<div class="flex flex-col items-center justify-center pt-2 md:pt-0">
+					<div class="flex flex-col items-center justify-center pt-2 md:pt-0 text-gray-700 dark:text-gray-100">
 						<!-- heading -->
-						<p class="pt-12 pb-8 font-light text-white text-3xl md:text-4xl">联系方式</p>
+						<p class="pt-12 pb-8 font-light text-3xl md:text-4xl">联系方式</p>
 
 						<!-- details -->
 						<div class="flex flex-col items-center space-y-6 pb-10 pt-3">
 							<!-- app -->
-							<div class="flex flex-col items-center text-white">
+							<div class="flex flex-col items-center">
 								<svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 9l3 3-3 3m5 0h3M5 20h14a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
 								</svg>
@@ -678,7 +678,7 @@
 							</div>
 
 							<!-- website -->
-							<div class="flex flex-col items-center text-white">
+							<div class="flex flex-col items-center">
 								<svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
 								</svg>
