changed Credits to Team

--- a/public/lang/es/credits/index.html
+++ b/public/lang/es/credits/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="site description" />
 		<meta name="keywords" content="8-12 words max" />
-		<title>Créditos</title>
+		<title>Equipo</title>
 		<link href="/css/styles.css" rel="stylesheet" />
 		<link rel="shortcut icon" type="image/jpg" href="/assets/favicon.ico" />
 		<script src="/js/local-storage-track.js"></script>
@@ -37,7 +37,7 @@
 						
 						<a href="/lang/es/changelog/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> Cambios </a>
 						<a href="/lang/es/faq/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> FAQ </a>
-						<a href="/lang/es/credits/" class="text-gray-100 rounded-full px-5 py-1 bg-[#B02AF5] transition duration-300"> Créditos </a>
+						<a href="/lang/es/credits/" class="text-gray-100 rounded-full px-5 py-1 bg-[#B02AF5] transition duration-300"> Equipo </a>
 						<button class="contact-nav-button text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300 font-semibold">Contacto</button>
 					</div>
 				</div>
@@ -138,7 +138,7 @@
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Descargar</a>
 					<a href="/lang/es/changelog" class="block text-gray-600 dark:text-gray-300">Cambios</a>
 					<a href="/lang/es/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
-					<a href="/lang/es/credits/" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Créditos</a>
+					<a href="/lang/es/credits/" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Equipo</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Contacto</button>
 
 					<!-- mobile language button -->
@@ -177,14 +177,14 @@
 		<main class="pb-16">
 			<!-- heading -->
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center text-gray-700 dark:text-yellow-500 transition duration-200">
-				<span class="hidden lg:flex font-semibold lg:text-5xl">Créditos</span>
+				<span class="hidden lg:flex font-semibold lg:text-5xl">Equipo</span>
 				<span class="lg:hidden flex flex-col items-center text-4xl font-semibold space-y-3">
-					<p>Créditos</p>
+					<p>Equipo</p>
 				</span>
 			</header>
 
 			<section class="text-gray-700 dark:text-gray-300 flex justify-center pt-14">
-				<div class="shadow-md w-[85%] md:w-[60%] rounded-lg bg-gradient-to-tl from-green-200 to-yellow-100 dark:from-red-800 dark:to-purple-900 bg-gray-200 dark:bg-[#222222] transition duration-200 ease-in-out">
+				<div class="shadow-md w-[85%] md:w-[60%] rounded-lg  bg-gray-200 dark:bg-[#222222] transition duration-200 ease-in-out">
 					<div class="p-4 pt-6 md:p-10 space-y-4 flex flex-col">
 						<!-- creator -->
 						<div class="space-x-1 flex items-start md:items-center">
