--- a/public/lang/es/legal-notice/index.html
+++ b/public/lang/es/legal-notice/index.html
@@ -37,7 +37,7 @@
 						
 						<a href="/lang/es/changelog/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> Cambios </a>
 						<a href="/lang/es/faq/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> FAQ </a>
-						<a href="/lang/es/credits/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> Créditos </a>
+						<a href="/lang/es/credits/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> Equipo </a>
 						<button class="contact-nav-button text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300 font-semibold">Contacto</button>
 					</div>
 				</div>
@@ -138,7 +138,7 @@
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Descargar</a>
 					<a href="/lang/es/changelog/" class="block text-gray-600 dark:text-gray-300">Cambios</a>
 					<a href="/lang/es/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
-					<a href="/lang/es/credits/" class="block text-gray-600 dark:text-gray-300">Créditos</a>
+					<a href="/lang/es/credits/" class="block text-gray-600 dark:text-gray-300">Equipo</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Contacto</button>
 
 					<!-- mobile language button -->
