--- a/public/lang/cn/legal-notice/index.html
+++ b/public/lang/cn/legal-notice/index.html
@@ -37,7 +37,7 @@
 						
 						<a href="/lang/cn/changelog/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> 更新日志 </a>
 						<a href="/lang/cn/faq/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> 常见问题解答 </a>
-						<a href="/lang/cn/credits/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> 学分 </a>
+						<a href="/lang/cn/credits/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> 团队 </a>
 						<button class="contact-nav-button text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300 font-semibold">联系我们</button>
 					</div>
 				</div>
@@ -137,7 +137,7 @@
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">下载 </a>
 					<a href="/lang/cn/changelog" class="block text-gray-600 dark:text-gray-300">更新日志 </a>
 					<a href="/lang/cn/faq/" class="block text-gray-600 dark:text-gray-300">常见问题解答 </a>
-					<a href="/lang/cn/credits/" class="block text-gray-600 dark:text-gray-300">学分</a>
+					<a href="/lang/cn/credits/" class="block text-gray-600 dark:text-gray-300">团队</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">联系我们</button>
 
 					<!-- mobile language button -->
