--- a/public/lang/de/changelog/index.html
+++ b/public/lang/de/changelog/index.html
@@ -37,7 +37,7 @@
 						
 						<a href="/lang/de/changelog/" class="text-gray-100 rounded-full px-5 py-1 bg-[#B02AF5] transition duration-300"> Änderungsprotokoll </a>
 						<a href="/lang/de/faq/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> FAQ </a>
-						<a href="/lang/de/credits/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> Kredite </a>
+						<a href="/lang/de/credits/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> Mannschaft </a>
 						<button class="contact-nav-button text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300 font-semibold">Kontakt</button>
 					</div>
 				</div>
@@ -138,7 +138,7 @@
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Herunterladen</a>
 					<a href="/lang/de/changelog" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Änderungsprotokoll</a>
 					<a href="/lang/de/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
-					<a href="/lang/de/credits/" class="block text-gray-600 dark:text-gray-300">Kredite</a>
+					<a href="/lang/de/credits/" class="block text-gray-600 dark:text-gray-300">Mannschaft</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Kontakt</button>
 
 					<!-- mobile language button -->
