--- a/public/lang/id/legal-notice/index.html
+++ b/public/lang/id/legal-notice/index.html
@@ -37,7 +37,7 @@
 						
 						<a href="/lang/id/changelog/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> Sejarah Perubahan </a>
 						<a href="/lang/id/faq/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> Pertanyaan umum </a>
-						<a href="/lang/id/credits/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> Kredit </a>
+						<a href="/lang/id/credits/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> Tim </a>
 						<button class="contact-nav-button text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300 font-semibold">Pesan Bantuan</button>
 					</div>
 				</div>
@@ -138,7 +138,7 @@
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Unduhan</a>
 					<a href="/lang/id/changelog/" class="block text-gray-600 dark:text-gray-300">Sejarah Perubahan</a>
 					<a href="/lang/id/faq/" class="block text-gray-600 dark:text-gray-300">Pertanyaan umum</a>
-					<a href="/lang/id/credits/" class="block text-gray-600 dark:text-gray-300">Kredit</a>
+					<a href="/lang/id/credits/" class="block text-gray-600 dark:text-gray-300">Tim</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Pesan Bantuan</button>
 
 					<!-- mobile language button -->
