--- a/public/lang/ru/changelog/index.html
+++ b/public/lang/ru/changelog/index.html
@@ -37,7 +37,7 @@
 						
 						<a href="/lang/ru/changelog/" class="text-gray-100 rounded-full px-5 py-1 bg-[#B02AF5] transition duration-300"> Журнал изменений </a>
 						<a href="/lang/ru/faq/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> ЧаВо </a>
-						<a href="/lang/ru/credits/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> Кредиты </a>
+						<a href="/lang/ru/credits/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> Команда </a>
 						<button class="contact-nav-button text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300 font-semibold">Связаться с нами</button>
 					</div>
 				</div>
@@ -138,7 +138,7 @@
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Скачать</a>
 					<a href="/lang/ru/changelog" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Журнал изменений</a>
 					<a href="/lang/ru/faq/" class="block text-gray-600 dark:text-gray-300">ЧаВо</a>
-					<a href="/lang/ru/credits/" class="block text-gray-600 dark:text-gray-300">Кредиты</a>
+					<a href="/lang/ru/credits/" class="block text-gray-600 dark:text-gray-300">Команда</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Связаться с нами</button>
 
 					<!-- mobile language button -->
