added chinese community manager

--- a/public/lang/de/legal-notice/index.html
+++ b/public/lang/de/legal-notice/index.html
@@ -33,12 +33,12 @@
 					</a>
 					<!-- primary nav -->
 					<div class="hidden xl:flex items-center space-x-5 pt-1 text-[1.05rem] font-semibold">
-						<a href="/lang/de" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> Home </a>
+						<a href="/lang/de" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#E23B8B] transition duration-300"> Home </a>
 						
-						<a href="/lang/de/changelog/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> Änderungsprotokoll </a>
-						<a href="/lang/de/faq/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> FAQ </a>
-						<a href="/lang/de/credits/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300"> Mannschaft </a>
-						<button class="contact-nav-button text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#B02AF5] transition duration-300 font-semibold">Kontakt</button>
+						<a href="/lang/de/changelog/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#E23B8B] transition duration-300"> Änderungsprotokoll </a>
+						<a href="/lang/de/faq/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#E23B8B] transition duration-300"> FAQ </a>
+						<a href="/lang/de/credits/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#E23B8B] transition duration-300"> Mannschaft </a>
+						<button class="contact-nav-button text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#E23B8B] transition duration-300 font-semibold">Kontakt</button>
 					</div>
 				</div>
 
@@ -58,11 +58,11 @@
 					<ul>
 						<li class="relative text-[1.05rem] font-semibold">
 							<!-- language button -->
-							<button class="language-button flex items-center space-x-1 rounded-full px-5 py-1 transition-colors duration-200 hover:bg-[#B02AF5] group">
-								<span class="text-gray-600 dark:text-gray-300 transition-colors duration-200 group-hover:text-gray-500 dark:group-hover:text-gray-200 font-semibold"> Deutsch </span>
+							<button class="language-button flex items-center space-x-1 rounded-full px-5 py-1 transition-colors duration-200 hover:bg-[#E23B8B] group">
+								<span class="text-gray-600 dark:text-gray-300 transition-colors duration-200 group-hover:text-gray-100 dark:group-hover:text-gray-200 font-semibold"> Deutsch </span>
 								<!-- icon -->
 								<div class="">
-									<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 transition duration-200 text-gray-600 dark:text-gray-300 group-hover:text-gray-500 dark:group-hover:text-gray-200 transform language-menu-icon" fill="none" viewbox="0 0 24 24" stroke="currentColor">
+									<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 transition duration-200 text-gray-600 dark:text-gray-300 group-hover:text-gray-100 dark:group-hover:text-gray-200 transform language-menu-icon" fill="none" viewbox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M19 9l-7 7-7-7" />
 									</svg>
 								</div>
@@ -292,14 +292,14 @@
 						<p class="pt-12 pb-8 font-light text-3xl md:text-4xl">Kontakt</p>
 
 						<!-- details -->
-						<div class="flex flex-col items-center space-y-6 pb-10 pt-3">
+						<div class="flex flex-col items-center space-y-10 pb-10 pt-3">
 							<!-- app -->
 							<div class="flex flex-col items-center">
 								<svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 9l3 3-3 3m5 0h3M5 20h14a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
 								</svg>
-								<p class="text-lg font-medium pr-2 pl-1">App</p>
-								<a href="mailto:write2me4help@gmail.com">Alex - write2me4help@gmail.com</a>
+								<p class="text-lg font-medium pr-2 pl-1">Business</p>
+								<a href="mailto:business@playcover.me">Alex - business@playcover.me</a>
 							</div>
 
 							<!-- website -->
@@ -308,7 +308,7 @@
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
 								</svg>
 								<p class="text-lg font-medium pr-2 pl-1">Webseite</p>
-								<a href="mailto:Jay@playcover.app">AJ - jay@playcover.app</a>
+								<a href="mailto:Jay@playcover.app">AJ - aj@playcover.me</a>
 							</div>
 
 							<!-- backend -->
