added none select in dark mode toggle

--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -101,7 +101,7 @@
 
 					<!-- light/dark theme button -->
 					<div class="relative">
-						<label for="theme-toggle" class="theme-label w-[3.4rem] h-7 rounded-full bg-gray-600 dark:bg-gray-300 flex items-center justify-between transition duration-300 ease-in-out cursor-pointer">
+						<label for="theme-toggle" class="theme-label w-[3.4rem] h-7 rounded-full bg-gray-600 dark:bg-gray-300 flex items-center justify-between transition duration-300 ease-in-out cursor-pointer select-none">
 							<!-- sun -->
 							<div class="pl-[0.20rem] opacity-0 dark:opacity-100 transition duration-300 ease-in-out">
 								<svg class="h-5 text-gray-600" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 20 20" fill="currentColor">
@@ -126,7 +126,7 @@
 				<div class="xl:hidden flex items-center space-x-4">
 					<!-- light/dark theme button -->
 					<div class="relative">
-						<label for="theme-toggle" class="theme-label w-[3.4rem] h-7 rounded-full bg-gray-600 dark:bg-gray-300 flex items-center justify-between transition duration-300 ease-in-out cursor-pointer">
+						<label for="theme-toggle" class="theme-label w-[3.4rem] h-7 rounded-full bg-gray-600 dark:bg-gray-300 flex items-center justify-between transition duration-300 ease-in-out cursor-pointer select-none">
 							<!-- sun -->
 							<div class="pl-[0.20rem] opacity-0 dark:opacity-100 transition duration-300 ease-in-out">
 								<svg class="h-5 text-gray-600" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 20 20" fill="currentColor">
