--- a/public/lang/es/changelog/index.html
+++ b/public/lang/es/changelog/index.html
@@ -24,7 +24,7 @@
 
 	<body class="flex flex-col h-screen justify-between bg-gray-100 dark:bg-body font-sourceSansPro transition duration-200 ease-in-out">
 		<!-- nav bar -->
-		<nav class="nav-bar max-w-screen px-6 lg:pr-12 lg:pl-10 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-gray-100 dark:bg-body transition duration-200 ease-in-out filter z-20">
+		<nav class="nav-bar max-w-screen px-6 lg:pr-12 lg:pl-10 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-gray-100 dark:bg-body transition duration-200 ease-in-out filter z-20 select-none">
 			<div class="flex justify-between">
 				<!-- logo -->
 				<div class="flex items-center lg:mr-10 space-x-10">
