updated accent colors

--- a/public/lang/ru/legal-notice/index.html
+++ b/public/lang/ru/legal-notice/index.html
@@ -48,7 +48,7 @@
 					<!-- donate button -->
 					<div class="relative">
 						<div class="h-[3.5rem] flex items-center">
-							<button class="group donate-nav-button  bg-yellow-500 dark:bg-[#791c0c] hover:bg-yellow-400 dark:hover:bg-[#992511] rounded-full px-5 py-1 transition duration-300">
+							<button class="group donate-nav-button  bg-yellow-500 dark:bg-[#992511] hover:bg-yellow-600 dark:hover:bg-[#7e1f0f] rounded-full px-5 py-1 transition duration-300">
 								<span class="text-[1.05rem] font-semibold text-white transition-colors duration-200"> Пожертвовать
  </span>
 							</button>
@@ -74,26 +74,26 @@
 								<!-- text -->
 								<ul class="space-y-4 flex flex-col items-center">
 									<li>
-										<a href="/lang/cn" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> 简体中文 </a>
+										<a href="/lang/cn" class="text-gray-700 hover:text-logo-purple dark:text-gray-300 dark:hover:text-logo-purple transition-colors duration-200"> 简体中文 </a>
 									</li>
 									<li>
-										<a href="/index.html" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> English </a>
+										<a href="/index.html" class="text-gray-700 hover:text-logo-purple dark:text-gray-300 dark:hover:text-logo-purple transition-colors duration-200"> English </a>
 									</li>
 									<li class="hidden">
-										<a href="/lang/jp" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> 日本語 </a>
+										<a href="/lang/jp" class="text-gray-700 hover:text-logo-purple dark:text-gray-300 dark:hover:text-logo-purple transition-colors duration-200"> 日本語 </a>
 									</li>
 									<li>
-										<a href="/lang/de" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Deutsch </a>
+										<a href="/lang/de" class="text-gray-700 hover:text-logo-purple dark:text-gray-300 dark:hover:text-logo-purple transition-colors duration-200"> Deutsch </a>
 									</li>
 									<li>
-										<a href="/lang/id" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200 flex flex-col items-center"><span>Bahasa</span>   Indonesia </a>
+										<a href="/lang/id" class="text-gray-700 hover:text-logo-purple dark:text-gray-300 dark:hover:text-logo-purple transition-colors duration-200 flex flex-col items-center"><span>Bahasa</span>   Indonesia </a>
 									</li>
 
 									<li class="hidden">
-										<a href="/lang/kr" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> 한국어 </a>
+										<a href="/lang/kr" class="text-gray-700 hover:text-logo-purple dark:text-gray-300 dark:hover:text-logo-purple transition-colors duration-200"> 한국어 </a>
 									</li>
 									<li>
-										<a href="/lang/es" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Español </a>
+										<a href="/lang/es" class="text-gray-700 hover:text-logo-purple dark:text-gray-300 dark:hover:text-logo-purple transition-colors duration-200"> Español </a>
 									</li>
 									
 								</ul>
@@ -205,8 +205,8 @@
 		<main class="pb-16">
 			<!-- heading -->
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
-				<span class="hidden lg:flex font-semibold lg:text-5xl text-gray-700 dark:text-yellow-500 transition duration-200">юридическое уведомление</span>
-				<span class="lg:hidden flex flex-col text-4xl font-semibold text-gray-700 dark:text-yellow-500 transition duration-200 space-y-3">
+				<span class="hidden lg:flex font-semibold lg:text-5xl text-gray-700 dark:text-logo-purple transition duration-200">юридическое уведомление</span>
+				<span class="lg:hidden flex flex-col text-4xl font-semibold text-gray-700 dark:text-logo-purple transition duration-200 space-y-3">
 					<p>законный</p>
 					<p>уведомление</p>
 				</span>
@@ -336,7 +336,7 @@
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
 								</svg>
 								<p class="text-lg font-medium pr-2 pl-1">Веб-сайт</p>
-								<a href="mailto:Jay@playcover.app">AJ - aj@playcover.me</a>
+								<a href="mailto:aj@playcover.me">AJ - aj@playcover.me</a>
 							</div>
 
 							<!-- backend -->
@@ -371,7 +371,7 @@
 					<!-- text -->
 					<div class="pt-6 md:pt-0 flex flex-col space-y-1">
 						<!-- logo -->
-						<h1 class="font-semibold text-xl bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">Продукт команды PlayCover</h1>
+						<h1 class="font-semibold text-xl bg-gradient-to-b from-logo-pink to-logo-purple text-transparent bg-clip-text">Продукт команды PlayCover</h1>
 
 						<!-- alex credits -->
 						<div class="relative">
@@ -394,13 +394,13 @@
 						<a href="https://github.com/Letscoder/PlayCover" target="_blank" class="flex flex-col group pr-5">
 							<svg class="h-9 pb-1 md:pb-[0] fill-current text-gray-900 dark:text-gray-200" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 512 512"><path d="M256 5.3C114.6 5.3 0 120.4 0 262.3a257 257 0 00175.1 244c12.8 2.3 17.5-5.6 17.5-12.5l-.4-43.7C121 465.6 106 415.7 106 415.7 94.4 386 77.6 378 77.6 378c-23.3-16 1.7-15.7 1.7-15.7 25.7 1.9 39.2 26.5 39.2 26.5 22.8 39.3 60 28 74.5 21.4 2.3-16.6 9-28 16.3-34.4-56.9-6.5-116.6-28.5-116.6-127 0-28 10-51 26.3-69-2.6-6.5-11.4-32.6 2.5-68 0 0 21.5-6.9 70.4 26.4a244.2 244.2 0 01128.2 0C369 105 390.5 112 390.5 112c14 35.3 5.1 61.5 2.5 68 16.4 18 26.3 40.9 26.3 69 0 98.7-59.8 120.4-116.8 126.8 9.1 7.9 17.3 23.6 17.3 47.5 0 34.4-.3 62.1-.3 70.5 0 7 4.6 15 17.6 12.4A257 257 0 00512 262.4c0-142-114.6-257-256-257z" /></svg>
 
-							<span class="group-hover:text-yellow-500 text-sm pt-1">GitHub</span>
+							<span class="group-hover:text-logo-purple text-sm pt-1">GitHub</span>
 						</a>
 
 						<!-- discord -->
 						<a href="https://discord.gg/FYVuF6CNzP" target="_blank" class="flex flex-col group">
 							<img class="h-9 pb-1 md:pb-[0]" src="/assets/discord.svg" alt="discord" />
-							<span class="group-hover:text-yellow-500 text-sm pt-1">Discord</span>
+							<span class="group-hover:text-logo-purple text-sm pt-1">Discord</span>
 						</a>
 					</div>
 				</section>
@@ -414,8 +414,8 @@
 				<section class="flex flex-col md:flex-row md:justify-between pb-5 md:items-center space-y-2">
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
-						<a href="/lang/ru/legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Правовая информация</a>
-						<a href="mailto:copyright@playcover.me" class="underline hover:text-yellow-500">Жалобы на нарушение авторских прав</a>
+						<a href="/lang/ru/legal-notice/" class="pr-4 hover:text-logo-purple underline text-left">Правовая информация</a>
+						<a href="mailto:copyright@playcover.me" class="underline hover:text-logo-purple">Жалобы на нарушение авторских прав</a>
 					</div>
 
 					<p class="inline">Copyright © 2021 Alexandr Dorofeev. Все права защищены.</p>
